Fix Acknowledgements on small screens

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -12,14 +12,14 @@
     992: 12,
   );
 
-  @each $size, $size-value in $sizes {
-    @media (min-width: #{$size}px) {
-      font-size: #{$size-value}rem;
-      height: #{$size-value}rem;
-      line-height: #{$size-value}rem;
-      width: #{$size-value}rem;
-    }
+@each $size, $size-value in $sizes {
+  @media (min-width: #{$size}px) {
+    font-size: #{$size-value}rem;
+    height: #{$size-value}rem;
+    line-height: #{$size-value}rem;
+    width: #{$size-value}rem;
   }
+}
 }
 
 #map {
@@ -27,7 +27,7 @@
 }
 
 #roster {
-  @media (min-width: 576px) {
+  @media (min-width: 0px) {
     width: 100%;
   }
 
